Множество мелких исправлений и чистка кода
* Множество мелких исправлений и чистка кода

* fix checkstyle